# PresetCPP

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md
